<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forecast.MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/input_city_name"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="@dimen/_10sdp"
        android:text="@string/get_weather"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/etSearch"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInfos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etSearch"
        app:layout_constraintTop_toBottomOf="@+id/tvSearch" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        tools:text ="error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/rvInfos"
        app:layout_constraintStart_toStartOf="@+id/rvInfos"
        app:layout_constraintBottom_toBottomOf="@+id/rvInfos"
        app:layout_constraintTop_toTopOf="@+id/rvInfos" />

    <FrameLayout
        android:id="@+id/flLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSearch" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>